# vibeio

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: publish.yml  rust.yml
.shiba/: pre-commit
custom-async/: Cargo.toml  build.rs
custom-async/src/: builder.rs  executor.rs  lib.rs  timer.rs
custom-async/src/blocking/: default.rs
custom-async/src/driver/: iocp.rs  mio.rs  mod.rs  uring.rs
custom-async/src/fs/: file.rs  metadata.rs  mod.rs  open_options.rs
custom-async/src/io/: buf.rs  mod.rs  splice.rs  util.rs
custom-async/src/net/: udp.rs
custom-async/src/net/tcp/: listener.rs  mod.rs  stream.rs
custom-async/src/net/unix/: mod.rs  stream.rs
custom-async/src/op/: accept.rs  connect.rs  hard_link.rs  mkdir.rs  mod.rs  open.rs  read.rs  readat.rs  readv.rs  recv.rs  recvfrom.rs  rename.rs  send.rs  sendto.rs  statx.rs  symlink.rs  unlink.rs  waitpid.rs  write.rs  writeat.rs  writev.rs
custom-async/src/process/: mod.rs  reaper.rs
custom-async/src/signal/: mod.rs  unix.rs  windows.rs
custom-async/src/time/: mod.rs  timeout.rs
custom-async/src/util/: async_wrap.rs  mod.rs
examples/: Cargo.toml
examples/src/http-server/: main.rs
examples/src/tcp-echo-server/: main.rs
src/: builder.rs  executor.rs  fd_inner.rs  main.rs  task.rs
src/blocking/: default.rs  mod.rs
src/driver/: iocp.rs  mio.rs  mock.rs  mod.rs  uring.rs
src/fs/: file.rs  mod.rs  open_options.rs
src/io/: mod.rs  util.rs
src/net/: mod.rs  tcp_listener.rs  tcp_stream.rs
src/net/tcp/: listener.rs  mod.rs  stream.rs
src/net/unix/: listener.rs  mod.rs  stream.rs
src/op/: accept.rs  accept_unix.rs  connect.rs  fsync.rs  hard_link.rs  io_util.rs  mod.rs  open.rs  read.rs  readv.rs  recv.rs  recvfrom.rs  rename.rs  symlink.rs  unlink.rs  write.rs  writeat.rs  writev.rs
src/time/: mod.rs  sleep.rs
vibeio/: Cargo.toml
vibeio-hyper/: Cargo.toml
vibeio-hyper/src/: lib.rs
vibeio-quinn/: Cargo.toml
vibeio-quinn/src/: lib.rs
vibeio/src/: builder.rs  executor.rs  fd_inner.rs  lib.rs  task.rs  timer.rs
vibeio/src/blocking/: default.rs
vibeio/src/driver/: iocp.rs  mio.rs  mod.rs  uring.rs
vibeio/src/fs/: file.rs  metadata.rs  mod.rs  open_options.rs
vibeio/src/io/: buf.rs  mod.rs  pipe.rs  splice.rs  stdio.rs  util.rs
vibeio/src/net/: mod.rs  udp.rs
vibeio/src/net/tcp/: listener.rs  mod.rs  stream.rs
vibeio/src/net/unix/: listener.rs  mod.rs  stream.rs
vibeio/src/op/: accept.rs  accept_unix.rs  fsync.rs  io_util.rs  mod.rs  read.rs  readat.rs  readiness.rs  recv.rs  recvfrom.rs  send.rs  sendto.rs  splice.rs  unlink.rs  waitpid.rs  write.rs  writeat.rs  writev.rs
vibeio/src/process/: mod.rs  reaper.rs
vibeio/src/signal/: mod.rs  unix.rs  windows.rs
vibeio/src/time/: interval.rs  mod.rs  sleep.rs
vibeio/src/util/: async_wrap.rs  mod.rs
