[package]
name = "vibeio-examples"
version = "0.1.2"
edition = "2021"
publish = false

[[bin]]
name = "tcp-echo-server"
path = "src/tcp-echo-server/main.rs"

#[[bin]]
#name = "lowlevel-cgi-client"
#path = "src/lowlevel/client.rs"

[dependencies]
vibeio = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
shiba = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
