[package]
name = "vibeio-hyper"
version = "0.2.3"
edition = "2021"
authors = ["Dorian Niemiec <dorian@ferron.sh>"]
description = "A compatibility layer for using `hyper` with the `vibeio` async runtime"
license = "MIT"
readme = "../README.md"
keywords = ["async", "http", "hyper"]
categories = ["network-programming", "web-programming"]
documentation = "https://docs.rs/vibeio-hyper"
repository = "https://github.com/ferronweb/vibeio"


[dependencies]
hyper = "1.8.1"
tokio = "1.50.0"
vibeio = { workspace = true }
